# broadband-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
api/: event_adapter.py  models.py  repository.py
api/routes/: messages.py  simulation.py
configs/: agents.yaml  model.yaml
core/: agent_factory.py  model_loader.py  session_manager.py
core/observability/: db.py  tracer.py
docs/: frontend_data_contract.md  plan_design_experience_assurance_alignment.md
frontend/: .env.development  vite.config.js  vite.config.ts
prompts/: insight.md  main_agent_system.md  orchestrator.md  planning.md  provisioning.md
scripts/: inspect_context.py
skills/cei_config/: SKILL.md
skills/data_insight/scripts/: run_insight.py  run_nl2code.py  run_query.py
skills/experience_assurance/: SKILL.md
skills/experience_assurance/references/: assurance_parameters.md
skills/fault_config/: SKILL.md
skills/insight_decompose/scripts/: list_schema.py
skills/insight_nl2code/scripts/: run_nl2code.py
skills/insight_plan/: SKILL.md
skills/insight_plan/references/: plan_fewshots.md  trajectory_templates.json
skills/insight_plan/scripts/: match_template.py
skills/insight_query/: SKILL.md
skills/insight_query/scripts/: run_insight.py  run_phase.py  run_query.py
skills/insight_reflect/: SKILL.md
skills/insight_report/: SKILL.md
skills/plan_design/: SKILL.md
skills/remote_loop/: SKILL.md
skills/report_generation/: SKILL.md
skills/solution_generation/: SKILL.md
skills/wifi_simulation/: SKILL.md
tests/: test_smoke.py
ui/: app.py  chat_renderer.py
(+8 files in other folders)
