[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "broadband-agent"
version = "0.1.0"
description = "家宽网络调优智能助手 — agno Team + 10 Skills 多智能体系统"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "broadband-agent team" }]
dependencies = [
    # ── agno 框架 + LLM ──
    "agno>=2.5.14,<3.0",
    "openai>=1.0.0",
    # ── Web UI ──
    "gradio>=4.0.0",
    # ── 基础设施 ──
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "aiofiles>=23.0",
    # ── 科学计算栈 (data_insight / ce_insight_core) ──
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
    # ── vendor 本地包 ──
    "ce-insight-core",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

# uv 从本地 vendor 路径解析 ce-insight-core，editable 模式安装
[tool.uv.sources]
ce-insight-core = { path = "vendor/ce_insight_core", editable = true }

# ── ruff 配置 ──
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
